tests/fixtures/compile-errors/register-invalid-number-params/input.ts
import { register } from "../../../../dist/typecheck.macro";
register();
